# course-platform

backend/: .gitignore  pyproject.toml
backend/app/application/: exceptions.py
backend/app/application/interfaces/: unit_of_work.py
backend/app/application/interfaces/repositories/: course_repository.py  lecture_repository.py  module_repository.py  section_repository.py
backend/app/application/use_cases/courses/: update_course.py
backend/app/application/use_cases/lectures/: create_lecture.py  update_lecture.py
backend/app/application/use_cases/modules/: create_module.py  update_module.py
backend/app/application/use_cases/sections/: create_section.py  update_section.py
backend/app/domain/: exceptions.py
backend/app/domain/entities/: section.py  user.py
backend/app/infrastructure/database/mappers/: course_mapper.py
backend/app/infrastructure/database/models/: course_model.py  section_model.py
backend/app/infrastructure/database/repositories/: module_repository.py
